src/ui/snapshots/codey__ui__input__tests__snapshot_after_complex_edits.snap
---
source: src/ui/input.rs
assertion_line: 1408
expression: rendered
---
┌ test-model ────────────────────── 1k ┐
│The quick red fox                     │
│                                      │
│                                      │
└──────────────────────────────────────┘
