src/ui/snapshots/codey__ui__input__tests__snapshot_empty_input.snap
---
source: src/ui/input.rs
assertion_line: 1054
expression: rendered
---
┌ test-model ──────────────────────────────── 1k ┐
│Type your message here...                       │
│                                                │
│                                                │
└────────────────────────────────────────────────┘
