src/ui/snapshots/codey__ui__input__tests__snapshot_special_chars.snap
---
source: src/ui/input.rs
assertion_line: 1088
expression: rendered
---
┌ test-model ──────────────────────────────── 1k ┐
│Special: !@#$%^&*() <>[]{} '"`~                 │
│                                                │
│                                                │
└────────────────────────────────────────────────┘
