src/ui/snapshots/codey__ui__input__tests__snapshot_with_ide_selection.snap
---
source: src/ui/input.rs
assertion_line: 1664
expression: rendered
---
┌ test-model ────────────────────────────────────────── 1k ┐
│[§ main.rs:1-3]  fix this function                        │
│                                                          │
│                                                          │
└──────────────────────────────────────────────────────────┘
