src/ui/snapshots/codey__ui__input__tests__snapshot_with_pasted_attachment.snap
---
source: src/ui/input.rs
assertion_line: 1646
expression: rendered
---
┌ test-model ────────────────────────────────────────── 1k ┐
│Check this: [¶ pasted (17 chars)]                         │
│                                                          │
│                                                          │
└──────────────────────────────────────────────────────────┘
